--- a/ColourRotater/ColourRotater.csproj
+++ b/ColourRotater/ColourRotater.csproj
@@ -5,6 +5,10 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <AssemblyName>colour-rotater</AssemblyName>
+    </PropertyGroup>
+
     <ItemGroup>
       <PackageReference Include="CommandLineParser" Version="2.8.0" />
       <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0" />
