--- a/ColourRotator/ColourRotator.csproj
+++ b/ColourRotator/ColourRotator.csproj
@@ -12,6 +12,12 @@
     <ItemGroup>
       <PackageReference Include="CommandLineParser" Version="2.8.0" />
       <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0" />
+      <PackageReference Include="System.Text.Json" Version="4.7.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="JSON\default-profile.json" />
+      <EmbeddedResource Include="Json\default-profile.json" />
     </ItemGroup>
 
 </Project>
